appId: com.toughra.ustadmobile
tags:
  - courseTest
  - usernameValidation
env:
  TESTRESULTSDIR: "build/reports/maestro/007_004_username_validation_and_add_profile_pic/Screenshots"
onFlowStart:
  - startRecording: 007_004_username_validation_and_add_profile_pic
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
       TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
# download the profile pic
- runFlow:
    file:  "common/download_file_via_browser.yaml"
    env:
      TESTFILENAME: "profile_Pic.jpg"
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/admin_login.yaml"
- tapOn: "People"
- tapOn:
    id: "floating_action_button"
- tapOn: "Add Person"
- tapOn: "First names*"
- inputText: User
- hideKeyboard
- tapOn: "Last name*"
- inputText: A
- hideKeyboard
- scrollUntilVisible:
    element:
      text: "Gender*"
    direction: DOWN
- tapOn: "Gender*"
- tapOn: Male
- tapOn: "SAVE"
- tapOn: "User A"
- tapOn: "CREATE ACCOUNT"
  # verify the Username must be at least 3 characters
- tapOn: "Username*"
- inputText: uS
- tapOn: "New password*"
- inputText: 1234
- tapOn: "SAVE"
- assertVisible: "Username must be at least 3 characters"
- tapOn: "Username*"
- eraseText
  # verify the uppercase, special characters and space are removed automatically
- inputText: uSer@ A
- tapOn: "SAVE"
- assertVisible: "usera"
- assertVisible: "Manage account"
- tapOn: "People"
- tapOn:
    id: "floating_action_button"
- tapOn: "Add Person"
- tapOn: "First names*"
- inputText: User
- hideKeyboard
- tapOn: "Last name*"
- inputText: B
- hideKeyboard
- scrollUntilVisible:
    element:
      text: "Gender*"
    direction: DOWN
- tapOn: "Gender*"
- tapOn: Male
- tapOn: "SAVE"
- tapOn: "User B"
- tapOn: "CREATE ACCOUNT"
 # verify the . _ characters are acceptable
- tapOn: "Username*"
- inputText: user.B_123
- tapOn: "New password*"
- inputText: 1234
- tapOn: "SAVE"
- assertVisible: "user.b_123"
- assertVisible: "Manage account"
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
  # verify the uppercase, special characters and space are removed automatically
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "user@ A"
      PASSWORD: "1234"
- assertVisible: "Library"
  # verify the . _ characters are acceptable
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "user.B_123"
      PASSWORD: "1234"
- assertVisible: "Library"
- tapOn: "People"
- tapOn: "User B"
- tapOn:
    id: "floating_action_button"
- tapOn: "Add"
- tapOn: "Select picture from files"
- runFlow:
    file: "common/select_picture_from_files.yaml"
    env:
      TESTFILENAME: "profile_Pic.jpg"
- tapOn: "SAVE"
- assertVisible:
    id: "person_picture"
- tapOn:
    id: "floating_action_button"
- tapOn: "Add"
- tapOn: "Remove picture"
- tapOn: "Save"
- assertNotVisible:
    id: "person_picture"