appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "build/reports/maestro/007_006_admin_enable_or_disable_guest_login/Screenshots"
onFlowStart:
  - startRecording: 007_006_admin_enable_or_disable_guest_login
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
#admin enable user registration
- runFlow:
    file: "common/admin_login.yaml"
- runFlow:
    file: "common/enable_guest_login.yaml"
- runFlow:
    file: "common/guest_login.yaml"

#admin disable user registration

- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/admin_login.yaml"
- tapOn: "Library"
- tapOn: "Settings"
- tapOn: "Site"
- tapOn:
    id: "floating_action_button"
- tapOn: "Guest login enabled"
- tapOn: "Save"
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- assertNotVisible: "Connect as Guest"
