appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "build/reports/maestro/007_007_admin_or_teacher_send_group_invitation_to_join_course/Screenshots"
onFlowStart:
  - startRecording: 007_007_admin_or_teacher_send_group_invitation_to_join_course
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile

---
- runScript:
    file: "common/import_users_via_http.js"
    env:
      TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
      IMPORT_FROM_CSV_FILE: "Ustad_Unenrolled_Teacher_And__Student_list.csv"
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "teach1"
      PASSWORD: "testt1"
- tapOn: "Courses"
- tapOn: "Test Course Block"
- tapOn:
    text: "Members"
    index: 0
- tapOn: "Add a student"
- tapOn: "Invite Via Contact"
- tapOn: "Add Username, Email or Phone"
- hideKeyboard
- inputText: "student1@email.com"
- tapOn: "Send"
#- assertVisible: "invitation sent"
# Fetch the invitation email via HTTP
- runScript:
    file: "common/fetch_invitation_link.js"
    env:
      EMAIL: "student1@email.com"
- tapOn: "Messages"
- assertVisible: "Student 1"
- assertVisible: "Student 2"

- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "stud1"
      PASSWORD: "tests1"
- tapOn: "Messages"
- tapOn: "Teacher 1"
- runFlow:
    when:
      visible:
        text: "Be careful interacting online and in-app!"
    commands:
      - tapOn: "Got it"
- tapOn: "Invitation to Test Course"
- tapOn: "Accept"
- tapOn: "Courses"
- tapOn: "Test Course Block"
- tapOn:
    text: "Members"
    index: 0
- assertVisible: "Student 1"