appId: com.toughra.ustadmobile
---
#this flow add MODULE block
# test data required :
  # 1) TESTRESULTSDIR : ${TESTRESULTSDIR} : provides the path to store test results
  # 2) MODULETITLE : provide the title for module block of String type

# add module
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
- tapOn: "Add block"
- tapOn: "Module"
- tapOn: "Title*"
- inputText: ${MODULETITLE}
- hideKeyboard
- tapOn: "Description"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "test block"
- tapOn: "Done"
- assertVisible:
    id: "app_title"
    text: "Add module"
- tapOn: "Done"
