appId: com.toughra.ustadmobile
---
#this flow add a new content inside a course as a content block
# Test parameters needs to provide for this test :
# 1) TESTFILENAME : provide the content name inside the 'test-files/content' folder
# 2) TESTCONTENTNAME : provide the content title, it should be a string

# edit the course to add blocks
- tapOn:
    id: "floating_action_button"
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
# add new content block inside course
- tapOn: "Add block"
- tapOn: "Content"
- tapOn: "Import from file"
- runFlow:
    file: "./select_file_from_picker.yaml"
    env:
      TESTFILENAME: ${TESTFILENAME}
- tapOn: "Next"
- tapOn: "Maximum points"
- inputText: "10"
- hideKeyboard
- tapOn: "Done"
- tapOn: "SAVE"
