appId: com.toughra.ustadmobile
---
# This test add a new teacher and create account on the course page
# test data required :
 # 1) TESTCOURSENAME: provide course name of string type
 # 2) TEACHERFIRSTNAME: provide teacher's first name of string type
 # 3) TEACHERLASTNAME: provide teacher's last name of string type
 # 4) GENDER: provide teacher's gender of string type
 # 5) PASSWORD: provide teacher's account password of string type
 # 6) TESTRESULTSDIR : provides the path to store test results

- tapOn: "Courses"
- tapOn: ${TESTCOURSENAME}
- tapOn: "MEMBERS"
- tapOn: "Add a teacher"
- tapOn: "Add a new person"
- tapOn: "First names*"
- inputText: ${TEACHERFIRSTNAME}
- hideKeyboard
- tapOn: "Last name*"
- inputText: ${TEACHERLASTNAME}
- hideKeyboard
- tapOn: "Gender*"
- tapOn: ${GENDER}
- tapOn: "SAVE"
- tapOn: "SAVE"
- tapOn: "${TEACHERFIRSTNAME} ${TEACHERLASTNAME}"
- tapOn: "VIEW PROFILE"
  # add account
- tapOn: "CREATE ACCOUNT"
- tapOn: "Username*"
- inputText: ${USERNAME}
- tapOn: "New password*"
- inputText: ${PASSWORD}
- tapOn: "SAVE"
