appId: com.toughra.ustadmobile
---
#this flow add TEXT block
# test data required :
  # 1) TESTRESULTSDIR : ${TESTRESULTSDIR} : provides the path to store test results
  # 2) TEXTTITLE: provide text title of string type
  # 3) TEXT: provide text to enter inside text box of string type

# add text
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
- tapOn: "Add block"
- tapOn: "Text"
- tapOn: "Title*"
- inputText: ${TEXTTITLE}
- hideKeyboard
- tapOn: "Description"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText:  ${TEXT}
- tapOn: "Done"
- assertVisible:
        id: "app_title"
        text: "Add text"
- tapOn: "Done"