appId: com.toughra.ustadmobile
---
# this test edit already record attendance of students
# this record 2nd and 5th student in list as absent, 3rd student as late and others as present
# test parameters needs to provide for this test :
# 1) TESTRESULTSDIR : ${TESTRESULTSDIR} : provides the path to store test results
- tapOn: "Courses"
- tapOn: ${TESTCOURSENAME}
- tapOn: "ATTENDANCE"
- scrollUntilVisible:
    element:
      text: "5 Present, 1 Partial, 0 Absent"
    direction: DOWN
- tapOn: "5 Present, 1 Partial, 0 Absent"
- tapOn: "Mark all present"
- tapOn:
    id: "com.toughra.ustadmobile:id/absent_button"
    index: 1
- tapOn: "Save"