appId: com.toughra.ustadmobile
---
- tapOn:
   id: ${TEXTFIELD}
- longPressOn:
    id: ${TEXTFIELD}
- tapOn: "Select all"
- eraseText
