appId: com.toughra.ustadmobile
---
# this flow directs the user to pictures screen
- runFlow:
    when:
      notVisible: "Downloads"
    commands:
      - tapOn:
          text: "Show roots"
- tapOn:
    text: "Downloads"
- runFlow:
    when:
      notVisible: ${TESTFILENAME}
    commands:
      - tapOn: "List view"
      - scrollUntilVisible:
          element:
            text: ${TESTFILENAME}
          direction: DOWN
- tapOn: ${TESTFILENAME}

