appId: com.toughra.ustadmobile

---
# This test tests the Library page of app adding content
# Test parameters needs to provide for this test :
 # 1) TESTFILENAME : provide the bulk user CSV file name inside the 'test-files/content' folder

- tapOn: "People"
- tapOn:
     id: "floating_action_button"
- tapOn: "Bulk import"
- tapOn: "Select file"
- runFlow:
    when:
      notVisible: "Downloads"
    file: select_file_from_picker.yaml
- runFlow:
    when:
      visible: "Downloads"
    commands:
      - scrollUntilVisible:
          element:
            text: ${TESTFILENAME}
          direction: DOWN
      - tapOn:
          text: ${TESTFILENAME}
- tapOn: "Import"
- tapOn: "Imported: 6"
